--- a/css/side_tabs.css
+++ b/css/side_tabs.css
@@ -2,6 +2,28 @@
 /* CSS Document */
  /* Style the tab */
 @media (min-width: 768px ){
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    border: 1px 0px solid #ccc;
+    width: 70%;
+    border-left: none;
+    height: 330px;
+	margin-bottom: 10px;
+	
+}
+.tabcontent1 {
+    float: left;
+    padding: 0px 12px;
+    border: 1px 0px solid #ccc;
+    width: 70%;
+    border-left: none;
+    height: 330px;
+	display:none;
+	margin-bottom: 10px;
+	
+}
+
 div.tab {
 	margin-bottom: 30px;
     float: left;
@@ -30,7 +52,71 @@ div.tab button {
     transition: 0.3s;
 }
  }
- @media (max-width: 767px ){
+ @media (max-width: 400px){
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    border: 1px 0px solid #ccc;
+    width: 70%;
+    border-left: none;
+	margin-bottom: 10px;
+	
+}
+.tabcontent1 {
+    float: left;
+    padding: 0px 12px;
+    border: 1px 0px solid #ccc;
+    width: 70%;
+    border-left: none;
+	display:none;
+	margin-bottom: 10px;
+	
+}
+div.tab {
+	margin-bottom: 30px;
+    float: left;
+    border: 1px 0px solid #ccc;
+    width: 30%;
+	font-family: 'Roboto', sans-serif;
+   
+}
+	div.tab button {
+	font-family: 'Roboto', sans-serif;
+	font-weight:bold;
+	font-size:12px;	
+    display: block;
+    background-color: inherit;
+    color: #414141;
+    padding: 22px 16px;
+    width: 100%;
+    border-bottom:1px solid #CBCBCB;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+}
+	 }
+ @media (max-width: 767px ) and (min-width: 400px){
+/* Style the tab content */
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    border: 1px 0px solid #ccc;
+    width: 70%;
+    border-left: none;
+	margin-bottom: 10px;
+	
+}
+.tabcontent1 {
+    float: left;
+    padding: 0px 12px;
+    border: 1px 0px solid #ccc;
+    width: 70%;
+    border-left: none;
+	display:none;
+	margin-bottom: 10px;
+	
+}
 div.tab {
 	margin-bottom: 30px;
     float: left;
@@ -42,7 +128,7 @@ div.tab {
 div.tab button {
 	font-family: 'Roboto', sans-serif;
 	font-weight:bold;
-	font-size:1.6vw;	
+	font-size:14px;	
     display: block;
     background-color: inherit;
     color: #414141;
@@ -71,24 +157,5 @@ div.tab button.active {
 }
 
 
-/* Style the tab content */
-.tabcontent {
-    float: left;
-    padding: 0px 12px;
-    border: 1px 0px solid #ccc;
-    width: 70%;
-    border-left: none;
-    height: 330px;
-	
-}
-.tabcontent1 {
-    float: left;
-    padding: 0px 12px;
-    border: 1px 0px solid #ccc;
-    width: 70%;
-    border-left: none;
-    height: 330px;
-	display:none;
-	
-}
+
 
